# marqeta-diva-mcp

./: .env.example  .gitignore  CLAUDE.md  ENDPOINT_AUDIT.md  FIXES_SUMMARY.md  GITHUB_SETUP.md  INTEGRATIONS.md  LARGE_DATASET_GUIDE.md  LICENSE  LOCAL_STORAGE_ARCHITECTURE.md  PUBLISHING.md  QUICKSTART.md  QUICK_INTEGRATION.md  RAG_GUIDE.md  README.md  RELEASE_NOTES_v0.3.0.md  SETUP_CHECKLIST.md  SUCCESS.md  TESTS.md  open-pypi-pages.sh  pyproject.toml  test_api_url_format.py  test_date_filtering.py  test_export_debug.py  test_field_validation.py  test_fixes.py  test_fixes_unit.py  test_get_view_debug.py  test_index_debug.py  test_new_endpoints.py  test_pagination.py  test_rag.py
src/marqeta_diva_mcp/: __init__.py  __main__.py  client.py  embeddings.py  local_storage.py  rag_tools.py  server.py  vector_store.py
